tests/sksl/errors/IfTypeMismatch.glsl
### Compilation failed:

error: 2: expected 'bool', but found 'int'
    if (3) {}
        ^
1 error
